--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,12 @@
     <string name="setting_title">Store Settings</string>
     <string name="store_status">Store Status</string>
     <string name="click_here"><u>Click Here</u></string>
+
+    <string-array name="categoryFnB">
+        <item> /topics/McD </item>
+    </string-array>
+
+    <string-array name="categoryEcommerece">
+        <item> /topics/awan-tech </item>
+    </string-array>
 </resources>
